Changed code, added rating in background